// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/HighlightedName Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <span
      class="sc-fKwCjr fXUfSH sc-ivKoCB kShasq sc-GfmNd ciDuGk sc-gtlWZe kMevBV"
    >
      Frontend Service
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/HighlightedName With Custom Colors 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <span
      class="sc-fKwCjr fXUfSH sc-ivKoCB clKcTt sc-GfmNd ciDuGk sc-gtlWZe iouKaS"
    >
      Frontend Service
    </span>
  </div>
</div>
`;
